# ultrasearch

./: AGENTS.md  CHANGELOG.md  COMPLETE_FIX_PLAN.md  Cargo.toml  LICENSE-MIT  PLAN_TO_BUILD_RUST_WINDOWS_FILE_EXPLORER_TOOL.md  PROGRESS_REPORT.md  README.md  UI_FIXES_NEEDED.md  UI_IMPLEMENTATION_FINAL_STATUS.md  build_installer.ps1
.beads/: .gitignore  beads.base.jsonl  beads.base.meta.json  beads.left.jsonl  beads.left.meta.json  issues.jsonl
.github/workflows/: ci.yml
ultrasearch/: Cargo.toml
ultrasearch/crates/cli/: Cargo.toml
ultrasearch/crates/cli/src/: main.rs
ultrasearch/crates/content-extractor/: Cargo.toml
ultrasearch/crates/content-extractor/src/: lib.rs  ocr.rs
ultrasearch/crates/content-index/: Cargo.toml
ultrasearch/crates/content-index/src/: lib.rs
ultrasearch/crates/core-serialization/: Cargo.toml
ultrasearch/crates/core-serialization/src/: lib.rs
ultrasearch/crates/core-types/: Cargo.toml
ultrasearch/crates/core-types/src/: lib.rs
ultrasearch/crates/core-types/src/config/: mod.rs
ultrasearch/crates/index-worker/: Cargo.toml
ultrasearch/crates/index-worker/src/: main.rs
ultrasearch/crates/ipc/src/: lib.rs
ultrasearch/crates/launcher/src/: main.rs
ultrasearch/crates/meta-index/: Cargo.toml
ultrasearch/crates/meta-index/src/: cache.rs  lib.rs
ultrasearch/crates/ntfs-watcher/: Cargo.toml
ultrasearch/crates/ntfs-watcher/src/: lib.rs
ultrasearch/crates/ntfs-watcher/src/usn/: watcher.rs
ultrasearch/crates/scheduler/: Cargo.toml
ultrasearch/crates/scheduler/src/: lib.rs
ultrasearch/crates/scheduler/src/idle/: detect.rs
ultrasearch/crates/scheduler/src/metrics/: collect.rs
ultrasearch/crates/scheduler/src/policy/: adaptive.rs  mod.rs
ultrasearch/crates/semantic-index/: Cargo.toml
ultrasearch/crates/semantic-index/src/ann/: hnsw.rs
ultrasearch/crates/service/: Cargo.toml
ultrasearch/crates/service/src/: bootstrap.rs  ipc.rs  lib.rs  logging.rs  main.rs  metrics.rs  priority.rs  scanner.rs  search_handler.rs  status_provider.rs
ultrasearch/crates/service/src/dispatcher/: job_dispatch.rs
ultrasearch/crates/service/src/windows/: service_main.rs
ultrasearch/crates/ui/: Cargo.toml
ultrasearch/crates/ui/src/: actions.rs  background.rs  lib.rs  main.rs  theme.rs
ultrasearch/crates/ui/src/components/: mod.rs
ultrasearch/crates/ui/src/ipc/: client.rs
ultrasearch/crates/ui/src/model/: state.rs
ultrasearch/crates/ui/src/views/: context_menu.rs  mod.rs  onboarding.rs  preview_view.rs  quick_search.rs  results_table.rs  search_view.rs  status_view.rs  update_panel.rs
ultrasearch/crates/ui/wix/: main.wxs
ultrasearch/docs/: CONFIG_REFERENCE.md
ultrasearch/wix/: main.wxs
