[package]
name = "content-index"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
description = "Content Tantivy index for UltraSearch"

[dependencies]
core-types = { path = "../core-types" }
anyhow = { workspace = true }
tantivy = { workspace = true }
tracing = { workspace = true }
