[package]
name = "meta-index"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
description = "Tantivy-based filename and metadata index for UltraSearch"

[dependencies]
core-types = { path = "../core-types" }
anyhow = { workspace = true }
tantivy = { workspace = true }
lru = { workspace = true }
ahash = { workspace = true }
slotmap = { workspace = true }
lasso = { workspace = true }
regex = "1.10"
