[package]
name = "ui"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
description = "GPUI desktop client for UltraSearch (placeholder)"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
ipc = { path = "../ipc" }
core-types = { path = "../core-types" }
gpui = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
futures = "0.3"
uuid = { workspace = true }
