[package]
name = "ui"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"
description = "GPUI desktop client for UltraSearch (placeholder)"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
ipc = { path = "../ipc" }
core-types = { path = "../core-types" }
gpui = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
futures = "0.3"
uuid = { workspace = true }

[package.metadata.wix]
upgrade-guid = "F5B2C1A2-5BC0-4C5D-93E4-0D6F9A6C9E11"
path-to-wxs = "wix/main.wxs"
description = "UltraSearch desktop client"
license = "MIT OR Apache-2.0"
manufacturer = "Ultrasearch Team"
homepage = "https://github.com/Dicklesworthstone/ultrasearch"
